  * Remove references to obsolete PGP keyrings in who-uploads/dscverify.
  * who-uploads: Don't check for default keyrings with --no-default-keyrings.
    (Closes: #515058)

  [ Stefano Rivera ]
  * debchange: Add precise as a recognised Ubuntu distro.

  [ David Prévot ]
  * bts: Remove outdated information from documentation for owner command.
    (Closes: #625990)

 -- Gerfried Fuchs <rhonda@debian.org>  Fri, 26 Aug 2011 21:09:51 +0200

devscripts (2.11.1) unstable; urgency=low

  [ David Prévot ]
  * Stylish manual pages convention review. (Closes: #628447)
  * Handle the last description in devscripts(1). (Closes: #628086)
  * French translation updates.

  [ Adam D. Barratt ]
  * debian/copyright: Update repository information somewhat belatedly
    for the move to git.

  [ James Vega ]
  * debchange: Remove dapper from the list of recognized distributions.
  * debcheckout: Handle Alioth's new anonymous access URLs when converting to
    authenticated URLs. (Closes: #628674)
  * debsnap: Allow -a to be specified multiple times.  Thanks to Timo Juhani
    Lindfors for the suggestion.
  * uscan: Fix --destdir regression when repacking zip archives.  Thanks to
    Christian Kastner for the patch.  (Closes: #628076)
  * mergechanges: Do not drop fields when the Files/Checksums-* fields are not
    at the end of the source files.  (Closes: #625620)
  * debuild: Call dpkg-source --before-build/--after-build when emulating
    dpkg-buildpackage.  (Closes: #628481)
  * chdist:
    + Create /etc/apt/apt.conf.d and /etc/apt/preferences.d in the chdist
      directory structure.  (Closes: #528274, LP: #566682)
    + When multiple binary versions exist, use newest version for
      compare-src-bin-*.
    + Copy archive keyrings to etc/apt/trusted.gpg.d.

  [ Christoph Berg ]
  * dscextract: new script, extracts a single file from a Debian source
    package.
  * debcheckout: When retrieving the source for debian/-only repositories,