@@ -44,6 +44,10 @@ devscripts (2.11.2) UNRELEASED; urgency=low
   * bts: Remove outdated information from documentation for owner command.
     (Closes: #625990)
 
+  [ Steve Langasek ]
+  * new script dep3changelog, which parses a DEP3 patch header and feeds a
+    suitable changelog entry to dch.
+
  -- Gerfried Fuchs <rhonda@debian.org>  Fri, 26 Aug 2011 21:09:51 +0200
 
 devscripts (2.11.1) unstable; urgency=low
